[enh] Add implementation of APASE export